--- a/style.css
+++ b/style.css
@@ -64,3 +64,11 @@ article.media-post > footer ul {
 .hidden {
   visibility: hidden;
 }
+
+#modal {
+  display: none;
+}
+
+.clickedHeart{
+  color: red;
+}
